Added alt text as images sometimes dont load correctly

--- a/index.html
+++ b/index.html
@@ -66,67 +66,67 @@
                         </div>
                      </div>
                      <div class="card" data-framework="terminator">
-                        <img class="card-front" src="assets/images/card-ill-be-back.png" alt="card">
+                        <img class="card-front" src="assets/images/card-ill-be-back.png" alt="I'll be back">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="terminator">
-                        <img class="card-front" src="assets/images/terminator.png" alt="card">
+                        <img class="card-front" src="assets/images/terminator.png" alt="Terminator">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="300">
-                        <img class="card-front" src="assets/images/300.png" alt="card">
+                        <img class="card-front" src="assets/images/300.png" alt="300">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="300">
-                        <img class="card-front" src="assets/images/this-is-sparta.png" alt="card">
+                        <img class="card-front" src="assets/images/this-is-sparta.png" alt="This is Sparta!">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="nemo">
-                        <img class="card-front" src="assets/images/nemo.png" alt="card">
+                        <img class="card-front" src="assets/images/nemo.png" alt="Nemo">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="nemo">
-                        <img class="card-front" src="assets/images/keep-swimming.png" alt="card">
+                        <img class="card-front" src="assets/images/keep-swimming.png" alt="Just Keep Swimming">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="zoolander">
-                        <img class="card-front" src="assets/images/center-for-ants.png" alt="card">
+                        <img class="card-front" src="assets/images/center-for-ants.png" alt="A center for ants">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="zoolander">
-                        <img class="card-front" src="assets/images/zoolander.png" alt="card">
+                        <img class="card-front" src="assets/images/zoolander.png" alt="Zoolander">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="spider-man">
-                        <img class="card-front" src="assets/images/spider-man.png" alt="card">
+                        <img class="card-front" src="assets/images/spider-man.png" alt="Spider-Man">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="spider-man">
-                        <img class="card-front" src="assets/images/great-responsibility.png" alt="card">
+                        <img class="card-front" src="assets/images/great-responsibility.png" alt="Comes great responsibility">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="hunger-games">
-                        <img class="card-front" src="assets/images/hunger-games.png" alt="card">
+                        <img class="card-front" src="assets/images/hunger-games.png" alt="The Hunger Games">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="hunger-games">
-                        <img class="card-front" src="assets/images/volunteer-as-tribute.png" alt="card">
+                        <img class="card-front" src="assets/images/volunteer-as-tribute.png" alt="Volunteer as tribute">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="elf">
-                        <img class="card-front" src="assets/images/elf.png" alt="card">
+                        <img class="card-front" src="assets/images/elf.png" alt="Elf">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="elf">
-                        <img class="card-front" src="assets/images/throne-of-lies.png" alt="card">
+                        <img class="card-front" src="assets/images/throne-of-lies.png" alt="Sit on a throne of lies">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="pulp-fiction">
-                        <img class="card-front" src="assets/images/pulp-fiction.png" alt="card">
+                        <img class="card-front" src="assets/images/pulp-fiction.png" alt="Pulp Fiction">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                      <div class="card" data-framework="pulp-fiction">
-                        <img class="card-front" src="assets/images/royale-with-cheese.png" alt="card">
+                        <img class="card-front" src="assets/images/royale-with-cheese.png" alt="Royale with cheese">
                         <img class="card-back" src="assets/images/card-back.png" alt="card">
                      </div>
                   </div>
