--- a/index.html
+++ b/index.html
@@ -142,6 +142,6 @@
          card.style.order = shuffleCards;
          });
       </script>
-      <script src="assets/js/js-test.js"></script>
+      <script src="assets/js/main.js"></script>
    </body>
 </html>
