--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.2/cosmo/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
       <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="shortcut icon" type="image/jpg" href="/assets/favicon/favicon.ico"/>
       <title>Film Pairs</title>
    </head>
    <body>
